--- a/style.css
+++ b/style.css
@@ -4,21 +4,14 @@ body {
   padding: 0px;
 }
 
-:root {
-  --primary-color: #7c3aed;
-  --dark-gray: #0f172a;
-  --off-white: #f3f4f6;
-}
-
-hr {
-  margin: 2em 0em;
-}
-
 .container {
-  padding: 0rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.link-primary {
-  text-decoration: none;
-  color: blue;
+p {
+  font-size: smaller;
+  font-style: italic;
 }
